# mlds-chatstat-bot

./: README.md  pyproject.toml
chatbot/: app.py
data/: mlds_chats_msgs.csv  mlds_chats_users.csv
notebooks/: .gitignore  1.0-parse_chats.ipynb
